// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<p
  class="css-j1yu9m"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-j1yu9m"
>
  <span>
    Some people are worth melting for.
  </span>
</div>
`;

exports[`props should render with custom styles (Array) 1`] = `
<p
  class="css-1k7hfdr"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render with custom styles (object) 1`] = `
<p
  class="css-9ricam"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render with custom styles (string) 1`] = `
<p
  class="css-170o10"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;
